assets/css/style.css
.HeaderBox {
  position: relative;
  top: 0px;
  height: 100px;
  width: 100%;
  border-bottom: solid;
  border-color: #cccccc;
}

.NameBox {
  position: relative;
  left: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 280px;
  background-color: #4aaaa5;
}

h1 {
  margin: 0;
  color: #fff;
}

.LinksBox {
  position: absolute;
  top: 0px;
  right: 0px;
  height: 100%;
  width: 100px;
  background-color: red;
}

.Background {
  position: relative;
  top: 1px;
  background-color: seagreen;
}

.ContentBox {
  position: relative;
  margin: auto;
  top: 25px;
  width: 960px;
  border-style: solid;
  border-color: #dddddd;
  background-color: sienna;
}

